# SerialForge

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
examples/automation/: virtual-loopback-test.json
examples/commands/: basic-commands.json
examples/protocols/: simple-frame.json
examples/virtual-devices/: echo-device.json
scripts/: build-release.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/automation/: mod.rs
src-tauri/src/commands/: health.rs  mod.rs  serial.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/protocol/: checksum.rs  frame_parser.rs  mod.rs  types.rs
src-tauri/src/serial/: config.rs  connection.rs  events.rs  manager.rs  mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/virtual_port/: bridge.rs  endpoint.rs  link.rs  manager.rs  mod.rs  simulator.rs
src/app/: AppShell.tsx
src/components/ui/: badge.tsx  button.tsx  panel.tsx
src/features/automation/: AutomationPanel.tsx  BridgePanel.tsx  automationScript.test.ts  automationScript.ts
src/features/backend/: BackendPingCard.tsx
src/features/charts/: RealtimeChartPanel.tsx  curveSamples.test.ts  curveSamples.ts
src/hooks/: useSerialEvents.ts
src/services/: backend.ts  serial.test.ts  serial.ts
src/stores/: serialStore.ts  themeStore.ts  workspaceStore.test.ts  workspaceStore.ts
src/types/: connection.ts
src/utils/: hex.test.ts  hex.ts
(+16 files in other folders)
